@@ -6,11 +6,10 @@ import com.intellij.lang.ASTNode;
 import com.intellij.lang.Commenter;
 import com.intellij.lang.Language;
 import com.intellij.lang.LanguageCommenters;
-import com.intellij.lang.surroundWith.ModCommandSurrounder;
+import com.intellij.lang.surroundWith.PsiUpdateModCommandSurrounder;
 import com.intellij.lang.surroundWith.SurroundDescriptor;
 import com.intellij.lang.surroundWith.Surrounder;
 import com.intellij.modcommand.ActionContext;
-import com.intellij.modcommand.ModCommand;
 import com.intellij.modcommand.ModPsiUpdater;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.RangeMarker;
@@ -218,7 +217,7 @@ public final class CustomFoldingSurroundDescriptor implements SurroundDescriptor
   @Override
   public Surrounder @NotNull [] getSurrounders() {
     //noinspection TestOnlyProblems
-    return getAllSurrounders().toArray(new CustomFoldingRegionSurrounder[0]);
+    return getAllSurrounders().toArray(Surrounder.EMPTY_ARRAY);
   }
 
   @TestOnly
@@ -233,7 +232,7 @@ public final class CustomFoldingSurroundDescriptor implements SurroundDescriptor
   }
 
   @ApiStatus.Internal
-  public static final class CustomFoldingRegionSurrounder extends ModCommandSurrounder {
+  public static final class CustomFoldingRegionSurrounder extends PsiUpdateModCommandSurrounder {
 
     private final CustomFoldingProvider myProvider;
 
@@ -261,14 +260,14 @@ public final class CustomFoldingSurroundDescriptor implements SurroundDescriptor
     }
 
     @Override
-    public @NotNull ModCommand surroundElements(@NotNull ActionContext context, @NotNull PsiElement @NotNull [] elements) {
-      return ModCommand.psiUpdate(context, updater -> doSurround(context, ContainerUtil.map(elements, updater::getWritable), updater));
+    public void surroundElements(@NotNull ActionContext context, @NotNull PsiElement @NotNull [] elementsInCopy, @NotNull ModPsiUpdater updater) {
+      doSurround(context, List.of(elementsInCopy), updater);
     }
 
     private void doSurround(@NotNull ActionContext context, @NotNull List<@NotNull PsiElement> elements, @NotNull ModPsiUpdater updater) {
       if (elements.isEmpty()) return;
-      PsiElement firstElement = elements.get(0);
-      PsiElement lastElement = elements.get(elements.size() - 1);
+      PsiElement firstElement = elements.getFirst();
+      PsiElement lastElement = elements.getLast();
       PsiFile psiFile = firstElement.getContainingFile();
       String linePrefix;
       String lineSuffix;
